--- a/templates/include/sidebar.html
+++ b/templates/include/sidebar.html
@@ -94,7 +94,7 @@
                 </ul>
               </div>
             </li>
-            <li class="nav-item">
+            {% comment %} <li class="nav-item">
               <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
                 <span class="menu-title">User Pages</span>
                 <i class="menu-arrow"></i>
@@ -119,7 +119,7 @@
                   </li>
                 </ul>
               </div>
-            </li>
+            </li> {% endcomment %}
             {% comment %} <li class="nav-item">
               <a class="nav-link" href="docs/documentation.html" target="_blank">
                 <span class="menu-title">Documentation</span>
