--- a/templates/include/css.html
+++ b/templates/include/css.html
@@ -15,3 +15,7 @@
 <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
 <!-- End layout styles -->
 <link rel="shortcut icon" href="{% static 'assets/images/favicon.png' %}" />
+
+ <link rel="stylesheet" href="https://cdn.datatables.net/1.13.5/css/jquery.dataTables.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/fixedheader/3.4.0/css/fixedHeader.dataTables.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.dataTables.min.css"> 
