--- a/templates/include/script.html
+++ b/templates/include/script.html
@@ -17,3 +17,23 @@
 <script src="{% static 'assets/js/dashboard.js' %}"></script>
 
 <script src="{% static 'assets/js/chart.js' %}"></script>
+
+<!-- DataTables CDN -->
+{% comment %} <script src="https://cdn.datatables.net/1.11.1/js/jquery.dataTables.min.js"></script> {% endcomment %}
+
+<script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/fixedheader/3.4.0/js/dataTables.fixedHeader.min.js"></script> 
+<script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script> 
+
+
+<!-- Additional DataTables CSS (optional) -->
+
+    <!-- End custom js for this page -->
+
+    <script>
+          $(function () {
+            $("#example").DataTable({
+              "responsive": true, "lengthChange": false, "autoWidth": true,
+            }).buttons().container().appendTo('#example7_wrapper .col-md-6:eq(0)');
+          });
+    </script>
