--- a/templates/include/sidebar.html
+++ b/templates/include/sidebar.html
@@ -94,6 +94,14 @@
                 </ul>
               </div>
             </li>
+
+           
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'contact-list' %}">
+                <span class="menu-title">Contact</span>
+                <i class="mdi mdi-phone menu-icon"></i>
+              </a>
+            </li>
             {% comment %} <li class="nav-item">
               <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
                 <span class="menu-title">User Pages</span>
