--- a/templates/pages/samples/register.html
+++ b/templates/pages/samples/register.html
@@ -62,7 +62,7 @@
                   <div class="mt-3 d-grid gap-2">
                     <a class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" href="#">SIGN UP</a>
                   </div>
-                  <div class="text-center mt-4 font-weight-light"> Already have an account? <a href="{% url 'login' %}" class="text-primary">Login</a>
+                  <div class="text-center mt-4 font-weight-light"> Already have an account? <a href="{% url 'index' %}" class="text-primary">Login</a>
                   </div>
                 </form>
               </div>
