--- a/templates/pages/contact/contactlist.html
+++ b/templates/pages/contact/contactlist.html
@@ -27,7 +27,7 @@ table.dataTable tbody td {
     
       <div class="card">
         <div class="card-body">
-        <a href="{% url 'contact' %}" class="btn btn-primary" style="float:right; margin-bottom:20px;">Add Contact</a>
+        <a href="{% url 'contact' %}" class="btn btn-primary" style="float:right; margin-bottom:20px; background-color: #61CE70;">Add Contact</a>
           <h4 class="card-title">Contact List</h4>
           {% comment %} <p class="card-description"> Add class <code>.table-bordered</code> {% endcomment %}
           </p>
