--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -1,7 +1,19 @@
  {% load static %}
+ <style>
+ .navbar .navbar-brand-wrapper .navbar-brand {
+    color: #27367f;
+    font-size: 1.5rem;
+    line-height: 48px;
+    margin-right: 0;
+    padding: 0.25rem 0;
+    width: 36% !important;
+    text-align: left;
+    padding-left: 2.25rem;
+}
+ </style>
  <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
-          <a class="navbar-brand brand-logo" href="index.html"><img src="{% static 'assets/images/logo.svg'%}" alt="logo" /></a>
+          <a class="navbar-brand brand-logo" href="index.html"><img src="{% static 'assets/images/alf_logo.png'%}" alt="logo" /></a>
           <a class="navbar-brand brand-logo-mini" href="index.html"><img src="{% static 'assets/images/logo-mini.svg'%}" alt="logo" /></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
