--- a/templates/pages/samples/login.html
+++ b/templates/pages/samples/login.html
@@ -22,6 +22,15 @@
     <!-- End layout styles -->
     <link rel="shortcut icon" href="{% static 'assets/images/favicon.png' %}" />
   </head>
+  <style>
+  .auth .brand-logo img {
+    width: 86px !important;
+}
+.auth .brand-logo {
+    margin-bottom: 2rem;
+    text-align: center !important;
+}
+</style>
   <body>
     <div class="container-scroller">
       <div class="container-fluid page-body-wrapper full-page-wrapper">
@@ -30,7 +39,7 @@
             <div class="col-lg-4 mx-auto">
               <div class="auth-form-light text-left p-5">
                 <div class="brand-logo">
-                  <img src="{% static 'assets/images/logo.svg' %}">
+                  <img src="{% static 'assets/images/alf_logo.png' %}">
                 </div>
                 <h4>Hello! let's get started</h4>
                 <h6 class="font-weight-light">Sign in to continue.</h6>
